[package]
name = "agario"
version = "0.1.0"
authors = ["oleja <olejav7@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = "0.4"
console_log = { version = "1.0", features = ["color"] }
banan = { path = "../../../banan" }
wasm-bindgen = "0.2.84"
wgpu = { version = "22.0", features = ["webgl"]}
web-sys = { version = "*", features = ["console"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
pollster = "*"
winit = { version = "0.29", features = ["rwh_05"] }
hecs = "*"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
